# jaguar_project

./: .env.sample  .gitignore  E00_experiment_outline.md  README.md  generated_runs.txt  kaggle_train_array.slurm  pyproject.toml  requirements.txt  submission.csv  summary_config.json  xai_similarity.slurm
configs/: experiments.md  leaderboard_experiment_eva.toml  leaderboard_experiments.toml  preprocessing_configs.md
configs/base/: eda_base.toml  ensemble_base.toml  kaggle_base.toml  scientific_base.toml  xai_base.toml
configs/experiments/: baseline.toml  eda_background_intervention.toml  eda_background_old.toml  eda_base.toml  eda_foreground_contribution.toml  eda_xai_class_attribution.toml  eda_xai_metrics.toml  eda_xai_similarity.toml  kaggle_augmentation.toml  kaggle_backbone.toml  kaggle_baseline.toml  kaggle_deduplication.toml  kaggle_ensemble.toml  kaggle_losses.toml  kaggle_mining.toml  kaggle_optim_sched.toml  kaggle_resizing.toml  kaggle_retrieval.toml  kaggle_rounds_comparison.toml  kaggle_soup_sensitivity.toml  kaggle_stability.toml  kaggle_stat_stability.toml  scientific_background.toml  scientific_background_old.toml  scientific_base.toml  scientific_deduplication.toml  scientific_stat_stability.toml  xai_background.toml  xai_metrics.toml  xai_similarity.toml
documentation/experiment_readmes/: kaggle_deduplication.md
documentation/kaggle_submissions/: kaggle_ensemble_v1.csv  kaggle_mining_v1.csv  kaggle_optim_sched_v1.csv  kaggle_retrieval_no_tta_v1.csv  kaggle_retrieval_tta_qe_reranking_v1.csv  kaggle_retrieval_tta_v1.csv
experiment_submissions/: kaggle_resizing_v1.csv
logs/: array_1758128_0.err  array_1758128_0.out  array_1758128_1.err  array_1758128_1.out  array_1758128_2.err  array_1758128_2.out  array_1758128_3.err  array_1758128_3.out  array_1758128_4.err  array_1758128_4.out
notebooks/: stage_0_preprocessing_SAM3.ipynb  stage_1.5_deduplication.ipynb  stage_1_create_embeddings.ipynb  stage_2_deduplication_split.ipynb  stage_3_5_xai.ipynb  stage_3_metric_model.ipynb  stage_4_classifier.ipynb
reports/: E00_experiments_outline.md  EDA_EXPERIMENTS.md
slurm_scripts/: eda_background.slurm  generated_runs.txt  kaggle_train_array.slurm  xai_metrics.slurm  xai_similarity.slurm
src/: FiftyOne.py  datasets.py  gradCam.py  models.py  preprocessing.py  utils.py
tests/: test_metrics.py
(+843 files in other folders)
