[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaguar_project"
version = "0.1.0"
description = "Jaguars"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
  "tqdm>=4.66",
  "pytest>=8.0",
  "torch>=2.2",
  "scipy>=1.4",
  "matplotlib>=3.7",
  "huggingface-hub>=0.23",
  "pytest>=8.3.3"
]

[project.optional-dependencies]
dev = [
  "pytest >=8.3.3", 
]

[tool.setuptools]
package-dir = {"" = "src"}
